[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wadell_rs"
version = "0.1.0"
authors = [{name = "Pawel Tomasz Pieta", email = "papi@dtu.dk"}]
description = "2D sphericity and roundness calculation"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["wadell_rs", "wadell_rs.external"]